--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,44 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.shaker</groupId>
-    <artifactId>spring-cloud-example</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>example-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>service-hi</module>
+        <module>eureka-server</module>
+        <module>gateway</module>
+        <module>config</module>
+        <module>spring-boot-admin-server</module>
+    </modules>
 
     <packaging>pom</packaging>
+
+    <properties>
+        <spring-boot.version>2.1.0.RELEASE</spring-boot.version>
+        <spring-cloud.version>Finchley.SR2</spring-cloud.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- spring boot -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- spring cloud -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
