--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>service-hi</module>
         <module>eureka-server</module>
+        <module>eureka-discovery-client</module>
         <module>gateway</module>
         <module>config</module>
         <module>spring-boot-admin-server</module>
@@ -52,4 +53,24 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <!--<repository>-->
+            <!--<id>aliyun-maven</id>-->
+            <!--<name>aliyun maven</name>-->
+            <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+            <!--<layout>default</layout>-->
+            <!--<snapshots>-->
+                <!--<enabled>false</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+        <!--<repository>-->
+            <!--<id>spring-milestones</id>-->
+            <!--<name>Spring Milestones</name>-->
+            <!--<url>https://repo.spring.io/libs-milestone</url>-->
+            <!--<snapshots>-->
+                <!--<enabled>false</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+    </repositories>
 </project>
