--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>eureka-server</module>
         <module>eureka-discovery-client</module>
         <module>gateway</module>
-        <module>config</module>
+        <module>config-server</module>
         <module>spring-boot-admin-server</module>
     </modules>
 
@@ -56,21 +56,21 @@
 
     <repositories>
         <!--<repository>-->
-            <!--<id>aliyun-maven</id>-->
-            <!--<name>aliyun maven</name>-->
-            <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
-            <!--<layout>default</layout>-->
-            <!--<snapshots>-->
-                <!--<enabled>false</enabled>-->
-            <!--</snapshots>-->
+        <!--<id>aliyun-maven</id>-->
+        <!--<name>aliyun maven</name>-->
+        <!--<url>http://maven.aliyun.com/nexus/content/groups/public/</url>-->
+        <!--<layout>default</layout>-->
+        <!--<snapshots>-->
+        <!--<enabled>false</enabled>-->
+        <!--</snapshots>-->
         <!--</repository>-->
         <!--<repository>-->
-            <!--<id>spring-milestones</id>-->
-            <!--<name>Spring Milestones</name>-->
-            <!--<url>https://repo.spring.io/libs-milestone</url>-->
-            <!--<snapshots>-->
-                <!--<enabled>false</enabled>-->
-            <!--</snapshots>-->
+        <!--<id>spring-milestones</id>-->
+        <!--<name>Spring Milestones</name>-->
+        <!--<url>https://repo.spring.io/libs-milestone</url>-->
+        <!--<snapshots>-->
+        <!--<enabled>false</enabled>-->
+        <!--</snapshots>-->
         <!--</repository>-->
     </repositories>
 </project>
