--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>eureka-discovery-client</module>
         <module>gateway</module>
         <module>config-server</module>
+        <module>config-client</module>
         <module>spring-boot-admin-server</module>
     </modules>
 
@@ -22,6 +23,20 @@
         <spring-boot.version>2.2.2.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
