--- a/eureka-discovery-client/pom.xml
+++ b/eureka-discovery-client/pom.xml
@@ -12,15 +12,17 @@
     <artifactId>eureka-discovery-client</artifactId>
 
     <dependencies>
-        <!-- 健康监控 -->
+        <!-- health -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- eureka client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
