--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>eureka-server</artifactId>
 
     <dependencies>
+        <!-- eureka server -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
