--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>service-hi</module>
+        <module>service-ribbon</module>
         <module>eureka-server</module>
         <module>eureka-discovery-client</module>
         <module>gateway</module>
