--- a/service-feign/src/main/resources/application.yaml
+++ b/service-feign/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 server:
-  port: 8781
+  port: 8782
 
 spring:
   application:
-    name: service-ribbon
+    name: service-feign
 
 eureka:
   instance:
@@ -16,8 +16,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
     # 到注册中心获取最新信息的间隔时间，eureka本地缓存的刷新间隔时间
     registry-fetch-interval-seconds: 5
-
-#ribbon:
-#  # 服务器列表的刷新间隔时间，ribbon缓存的刷新间隔时间
-#  server-list-refresh-interval: 2000
 
