--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,15 @@
     <artifactId>example-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>service-hi</module>
-        <module>service-ribbon</module>
-        <module>service-feign</module>
         <module>eureka-server</module>
         <module>eureka-discovery-client</module>
-        <module>gateway</module>
         <module>config-server</module>
         <module>config-client</module>
+        <module>gateway</module>
+        <module>service-zuul</module>
+        <module>service-ribbon</module>
+        <module>service-feign</module>
+        <module>service-hi</module>
         <module>spring-boot-admin-server</module>
     </modules>
 
