--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -4,12 +4,13 @@ server:
 
 eureka:
   instance:
-    hostname: eureka-server-example
+    hostname: localhost
   client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    # 声明自己是个服务端
+    registerWithEureka: false # false表示不向注册中心注册自己
+    fetchRegistry: false # false表示自己就是注册中心，职责是维护实例，不参加检索
+#    serviceUrl: # 设置eureka server的交互地址，即对外暴露的地址，建议采用默认即可
+#      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     # 影响到及时获取服务信息，响应缓存的刷新间隔时间
     response-cache-update-interval-ms: 30
