--- a/config-client/src/main/resources/bootstrap.yaml
+++ b/config-client/src/main/resources/bootstrap.yaml
@@ -10,5 +10,14 @@ spring:
       label: master
       # 开发环境配置文件
       profile: dev
-      # 配置服务中心的网址
-      uri: http://localhost:8771/
+#      # 配置服务中心的网址
+#      uri: http://localhost:8771/
+      # 采用discovery实现高可用
+      discovery:
+        enabled: true
+        service-id: config-server
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
