--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>service-zuul</module>
         <module>service-ribbon</module>
         <module>service-feign</module>
+        <module>service-turbine</module>
         <module>service-hi</module>
         <module>spring-boot-admin-server</module>
     </modules>
