--- a/spring-boot-admin-client/src/main/resources/application.yaml
+++ b/spring-boot-admin-client/src/main/resources/application.yaml
@@ -4,10 +4,22 @@ server:
 spring:
   application:
     name: admin-client
-  boot:
-    admin:
-      client:
-        url: http://localhost:8811
+  # 直连admin-server
+#  boot:
+#    admin:
+#      client:
+#        url: http://localhost:8811
+
+# 改为结合注册中心一起使用
+eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 10
+    health-check-url-path: /actuator/health
+
+  client:
+    registry-fetch-interval-seconds: 5
+    service-url:
+      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
 management:
   endpoints:
