--- a/spring-boot-admin-server/src/main/resources/application.yaml
+++ b/spring-boot-admin-server/src/main/resources/application.yaml
@@ -4,3 +4,22 @@ server:
 spring:
   application:
     name: admin-server
+
+# 结合注册中心一起使用
+eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 10
+    health-check-url-path: /actuator/health
+  client:
+    registry-fetch-interval-seconds: 5
+    service-url:
+      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: ALWAYS
